# structured-ocr-periodicals

./: .env.example  .gitignore  Makefile  README.md  extraction.ipynb  pyproject.toml
data/bnf_ocr/La_Plume_bpt6k1212187t_15-11-1893/: La_Plume_bpt6k1212187t_15-11-1893__page-001.txt  La_Plume_bpt6k1212187t_15-11-1893__page-002.txt  La_Plume_bpt6k1212187t_15-11-1893__page-003.txt  La_Plume_bpt6k1212187t_15-11-1893__page-004.txt  La_Plume_bpt6k1212187t_15-11-1893__page-005.txt  La_Plume_bpt6k1212187t_15-11-1893__page-006.txt  La_Plume_bpt6k1212187t_15-11-1893__page-007.txt  La_Plume_bpt6k1212187t_15-11-1893__page-008.txt  La_Plume_bpt6k1212187t_15-11-1893__page-009.txt  La_Plume_bpt6k1212187t_15-11-1893__page-011.txt  La_Plume_bpt6k1212187t_15-11-1893__page-012.txt  (+22 more)
docs/: ontology.md
notebooks/: 00_gold_standard_creation.ipynb  01_extraction.ipynb  01a_extraction.ipynb  01a_multi_schema_extraction.ipynb  01b_extraction_evaluation.ipynb  01b_gold_standard_creation.ipynb  01c_evaluation.ipynb  01c_extraction_evaluation.ipynb  01d_comparative_evaluation.ipynb  01f_multi_schema_comparative_evaluation.ipynb
prompts/: stage1_page_v2.txt  stage1_page_v2_pure.txt
schemas/: stage1_page.py  stage1_page_no_continuation.py  stage1_page_v2.py  stage1_page_v2_small_pure.py  stage_1_page_v2_medium.py  stage_1_page_v2_medium_pure.py  stage_1_page_v2_pure.py  stage_1_page_v2_small.py
tests/: test_ocr_metrics.py  test_schemas.py  test_text_processing.py
utils/: __init__.py  config.py  dataframe_helpers.py  evaluation.py  extraction.py  ocr_metrics.py  paths.py  text_processing.py
utils/providers/: __init__.py  _shared.py  base.py  mistral_ocr.py  mistral_vision.py
(+51 files in other folders)
